# rust_nn_examples

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
data/: sequence.csv
examples/: Cargo.toml
examples/src/: expression.rs  mnist.rs  mnist_jp.rs  t_gpu.rs  t_grad.rs  t_seq.rs  tensorops.rs  test.rs
gpu-accel/: Cargo.toml
gpu-accel/src/: gpu_module.rs  lib.rs  mig.rs  mig_shader.rs  migration.rs  migration_shader.rs  renewal.rs  shader_manager.rs
gpu-accel/src/shaders/: broadcasting_add.wgsl  dot.wgsl  elementwise_add.wgsl  elementwise_multiply.wgsl  matmul.wgsl  reduce_sum.wgsl  transpose.wgsl
gpu-accel/tests/: test.rs
nn-backbone/: Cargo.toml
nn-backbone/src/: lib.rs  model.rs
nn-backbone/src/autograd/: backward.rs  backwards.rs  gpu_context.rs  mod.rs  test.rs  variable.rs
nn-backbone/src/expr/: mod.rs
nn-backbone/src/layer/: activation.rs  linear.rs  loss.rs  mod.rs  model.rs  optimizer.rs  train.rs
src/: main.rs
src/prelude/: gpu_module.rs  mod.rs  shader_manager.rs
src/shaders/: broadcasting_add.wgsl  matrix_multiply.wgsl  reduce_sum.wgsl  transpose.wgsl
