[package]
name = "nn-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
gpu-accel = { path = "../gpu-accel" }
nn-backbone = { path = "../nn-backbone" }
pollster = { workspace = true }

[[bin]]
name = "test"
path = "src/test.rs"

[[bin]]
name = "tensor_ops"
path = "src/tensorops.rs"

[[bin]]
name = "mnist"
path = "src/mnist.rs"

[[bin]]
name = "mnist_jp"
path = "src/mnist_jp.rs"
