[package]
name = "nn-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
gpu-accel = { path = "../gpu-accel" }
nn-backbone = { path = "../nn-backbone" }
pollster = { workspace = true }
wgpu = { workspace = true }
tokio = { version = "1.0", features = ["full"] }

[[bin]]
name = "expression"
path = "src/expression.rs"

[[bin]]
name = "tensor_ops"
path = "src/tensorops.rs"

[[bin]]
name = "mnist"
path = "src/mnist.rs"
