[package]
name = "nn-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
gpu-accel = { path = "../gpu-accel" }
nn-backbone = { path = "../nn-backbone" }
pollster = { workspace = true }
wgpu = { workspace = true }
tokio = { version = "1.0", features = ["full"] }


[[bin]]
name = "t_gpu"
path = "src/t_gpu.rs"

[[bin]]
name = "t_seq"
path = "src/t_seq.rs"

[[bin]]
name = "t_grad"
path = "src/t_grad.rs"

[[bin]]
name = "tensor_ops"
path = "src/tensorops.rs"

[[bin]]
name = "mnist"
path = "src/mnist.rs"
